--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
   
    <main>
        <!--hero buttons-->
-    <section class="sectionporfoliobtn">
+    <section class="sectionporfoliobtn section">
         <div class="container">
            <ul class="portfoliobtn">
             <li class="portfoliobtn__item"> <button class="portfoliobtn__text" type="button">Wszystkie</button> </li>
@@ -61,7 +61,7 @@
     </section> 
 
     <!--9 images with description-->
-    <section class="section-btn">
+    <section class="section-btn section">
         <div class="container">
         <ul class="main-list">
             <li class="main-list-item"><div class="porfolio-wrapper" >
