--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </div>
     </div>
 </header>  
-
- <main>
+  
+<main>
   <!--hero-->  
   <section class="hero">
     <div class="container"> 
@@ -47,7 +47,7 @@
     </div> 
   </section>  
   <!--adventages-->
-  <section class="sectionadventages">
+  <section class="sectionadventages section">
     <div class="container" >
      <ul class="adventages">
          <li class="adventages__item"><svg class="adventages__icon" width="66" height="70">
@@ -77,7 +77,7 @@
     </div>
   </section>
   <!--offer-->
-  <section class="sectionoffer">
+  <section class="sectionoffer section">
     <div class="container" >
     <h2 class="offer__header">Czym sie zajmujemy</h2> 
     <ul class="offer">
@@ -109,7 +109,7 @@
     </div>
 </section>
 <!--our team-->
-<section class="sectionteam">
+<section class="sectionteam section">
     <div class="container">
     <h2 class="team__header">Nasz zespół</h2>
     <ul class="team">
@@ -207,7 +207,7 @@
 
 <!--clients-->
 
-<section class="sectionclients">
+<section class="sectionclients section">
     <div class="container">
         <h2 class="clients__header">Nasi klienci</h2>
         <ul class="clients">
@@ -362,5 +362,6 @@
     </div>
 </div>
 <script src="/goit-markup-hw-05/js/modal.js"></script>
+
 </body>
 </html>
