--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 <use href="./images/icons.svg#icon-phoneicon"></use>
             </svg>+48 111 111 111</a> 
             </div>
+            <button class="navigation__hamburger" type="button" data-menu-open>
+        <svg class="navigation__hamburgermenu" width="24" height="16"><use href="/images/burgerandxx.svg#icon-burger"></use></svg> 
+        </button>
+
     </div>
 </header>  
   
@@ -361,7 +365,51 @@
          </form>
     </div>
 </div>
-<script src="/goit-markup-hw-05/js/modal.js"></script>
+<script src="./js/modal.js"></script>
+
+<div class="mobilemenu is-hidden" data-menu>
+        <div class="menu-modal">
+            <button type="button" class="mobilemenu-close-btn" data-menu-close>
+                <svg width="18" height="18">
+                    <use href="/images/burgerandxx.svg#icon-xxclose"></use>
+                </svg>
+            </button>
+            <ul class="menu-mobile">
+                <li class="menu-mobile__item">
+                    <a class="menu-mobile__link" href="index.html">Agencja</a>
+                </li>
+                <li class="menu-mobile__item">
+                    <a class="menu-mobile__link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="menu-mobile__item">
+                    <a class="menu-mobile__link" href="#">Kontakt</a>
+                </li>
+            </ul>
+            <ul class="menu-contact">
+                <li class="menu-contact__item--phone">
+                    <a class="menu-contact__link" href="tel:+48111111111">+48 111 111 111</a>
+                </li>
+                <li class="menu-contact__item--mail">
+                    <a class="menu-contact__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+            </ul>
+            <ul class="menu-social">
+                <li class="menu-social__item">
+                    <a class="menu-social__link" href="#">Instagram</a>
+                </li>
+                <li class="menu-social__item">
+                    <a class="menu-social__link" href="#">Twitter</a>
+                </li>
+                <li class="menu-social__item">
+                    <a class="menu-social__link" href="#">Facebook</a>
+                </li>
+                <li class="menu-social__item">
+                    <a class="menu-social__link" href="#">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <script src="./js/mobile-menu.js"></script>
 
 </body>
 </html>
