--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </svg>+48 111 111 111</a> 
             </div>
             <button class="navigation__hamburger" type="button" data-menu-open>
-        <svg class="navigation__hamburgermenu" width="24" height="16"><use href="/images/burgerandxx.svg#icon-burger"></use></svg> 
+        <svg class="navigation__hamburgermenu" width="24" height="16"><use href="../images/burgerandxx.svg#icon-burger"></use></svg> 
         </button>
 
     </div>
@@ -371,7 +371,7 @@
         <div class="menu-modal">
             <button type="button" class="mobilemenu-close-btn" data-menu-close>
                 <svg width="18" height="18">
-                    <use href="/images/burgerandxx.svg#icon-xxclose"></use>
+                    <use href="../images/burgerandxx.svg#icon-xxclose"></use>
                 </svg>
             </button>
             <ul class="menu-mobile">
@@ -409,7 +409,7 @@
             </ul>
         </div>
     </div>
-    <script src="./js/mobile-menu.js"></script>
+    <script src="/js/mobile-menu.js"></script>
 
 </body>
 </html>
