--- a/index.html
+++ b/index.html
@@ -12,35 +12,81 @@
     <title>WebStudio</title>
 </head>
 <body>
- <header class="header"> 
-    <div class="container">
-    <p class="logo-one"> 
-        <a class="logo" href="index.html"><span class="logodark">Web</span>Studio </a> 
-    </p>
-    <nav class="navigation">
-        <ul class="navigation-list">
-            <li class="navigation-list-item">
-                <a class="navigation-list-link active-site" href="index.html">Agencja</a></li>
-            <li class="navigation-list-item">
-                <a class="navigation-list-link" href="portfolio.html">Portfolio</a></li>
-            <li class="navigation-list-item">
-                <a class="navigation-list-link" href="#">Kontakt</a></li>
-        </ul>
-    </nav>
-            <div class="address"> 
-            <a class="address-mail" href="mailto:info@devstudio.com"><svg class="mail-icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-mailicon"></use>
-            </svg>info@devstudio.com</a>
-            <a class="address-phone" href="tel:48111111111"><svg class="phone-icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-phoneicon"></use>
-            </svg>+48 111 111 111</a> 
-            </div>
-            <button class="navigation__hamburger" type="button" data-menu-open>
-        <svg class="navigation__hamburgermenu" width="24" height="16"><use href="../images/burgerandxx.svg#icon-burger"></use></svg> 
+ <header class="page-header">
+      <div class="container">
+        <a class="logo page-header__logo" href="index.html"
+          ><span class="logo__label">Web</span>Studio</a
+        >
+          <nav class="navigation">
+            <ul class="navigation__list list">
+              <li class="navigation__item">
+                <a class="navigation__link navigation__link--active link " href="index.html">Agencja</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link link" href="portfolio.html">Portfolio</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link link" href="#">Kontakt</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="header-contact__wrapper">
+            <a class="header-email link" href="mailto:info@devstudio.com">
+              <svg class="email-icon" width="16" height="12">
+                <use href="./images/icon.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a>
+            <a class="header-phone link" href="tel:+48111111111">
+              <svg class="phone-icon" width="10" height="16">
+                <use href="./images/icon.svg#icon-smartphone"></use>
+              </svg>+48 111 111 111</a>
+          </div>
+        </div>  
+        <button class="burger-btn" type="button" data-menu-open>
+        <svg class="burger-btn__icon" width="40" height="40">
+          <use href="./images/burgerandxx.svg#icon-burger"></use>
+        </svg> 
+      </button>
+      <div class="mobile-menu" data-menu>
+        <button class="mobile-menu__close-btn" type="button" data-menu-close>
+          <svg class="mobile-menu__icon" width="40" height="40">
+            <use href="./images/burgerandxx.svg#icon-xxclose"></use>
+          </svg>
         </button>
-
-    </div>
-</header>  
+        <nav class="mobile-nav">
+          <ul class="mobile-nav__list list">
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link link " href="index.html">Agencja</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link link" href="#">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+        
+          <div class="mobile-contacts">
+          <a class="mobile-phone link" href="tel:+48111111111">
+            +48 111 111 111</a>
+          <a class="mobile-email link" href="mailto:info@devstudio.com">
+            info@devstudio.com</a>
+        </div>
+        <ul class="mobile-social__list list">
+          <li class="mobile-social__item"><a class="mobile-social__link link" href="#">Instagram</a>
+          </li>
+          <li class="mobile-social__item"><a class="mobile-social__link link" href="#">Twitter</a>
+          </li>
+          <li class="mobile-social__item"><a class="mobile-social__link link" href="#">Facebook</a>
+          </li>
+          <li class="mobile-social__item"><a class="mobile-social__link link" href="#">LinkedIn</a>
+          </li>
+        </ul>
+      
+      </div>
+    </header> 
+   
   
 <main>
   <!--hero-->  
@@ -365,51 +411,9 @@
          </form>
     </div>
 </div>
-<script src="./js/modal.js"></script>
 
-<div class="mobilemenu is-hidden" data-menu>
-        <div class="menu-modal">
-            <button type="button" class="mobilemenu-close-btn" data-menu-close>
-                <svg width="18" height="18">
-                    <use href="../images/burgerandxx.svg#icon-xxclose"></use>
-                </svg>
-            </button>
-            <ul class="menu-mobile">
-                <li class="menu-mobile__item">
-                    <a class="menu-mobile__link" href="index.html">Agencja</a>
-                </li>
-                <li class="menu-mobile__item">
-                    <a class="menu-mobile__link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="menu-mobile__item">
-                    <a class="menu-mobile__link" href="#">Kontakt</a>
-                </li>
-            </ul>
-            <ul class="menu-contact">
-                <li class="menu-contact__item--phone">
-                    <a class="menu-contact__link" href="tel:+48111111111">+48 111 111 111</a>
-                </li>
-                <li class="menu-contact__item--mail">
-                    <a class="menu-contact__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-            </ul>
-            <ul class="menu-social">
-                <li class="menu-social__item">
-                    <a class="menu-social__link" href="#">Instagram</a>
-                </li>
-                <li class="menu-social__item">
-                    <a class="menu-social__link" href="#">Twitter</a>
-                </li>
-                <li class="menu-social__item">
-                    <a class="menu-social__link" href="#">Facebook</a>
-                </li>
-                <li class="menu-social__item">
-                    <a class="menu-social__link" href="#">LinkedIn</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <script src="/js/mobile-menu.js"></script>
+<script src="./js/modal.js"></script>
+<script src="./js/mobile-menu.js"></script>
 
 </body>
 </html>
