--- a/portfolio.html
+++ b/portfolio.html
@@ -16,35 +16,40 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <p class="logo-one">
-                <a class="logo" href="index.html"><span class="logodark">Web</span>Studio </a>
-            </p>
-            <nav class="navigation">
-                <ul class="navigation-list">
-                    <li class="navigation-list-item">
-                        <a class="navigation-list-link" href="index.html">Agencja</a>
-                    </li>
-                    <li class="navigation-list-item">
-                        <a class="navigation-list-link  active-site" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="navigation-list-item">
-                        <a class="navigation-list-link" href="#">Kontakt</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="address">
-                <a class="address-mail" href="mailto:info@devstudio.com"><svg class="mail-icon" width="16" height="12">
-                    <use href="./images/icons.svg#icon-mailicon"></use>
-                </svg>info@devstudio.com</a>
-                <a class="address-phone" href="tel:48111111111"><svg class="phone-icon" width="10" height="16">
-                    <use href="./images/icons.svg#icon-phoneicon"></use>
-                </svg>+48 111 111 111</a>
+    <header class="page-header">
+            <div class="container">
+                  <!--logo-->
+                  <a class="logo page-header__logo" href="index.html"><span class="logo__span">Web</span>Studio</a>
+                  <svg class="page-header__burger-icon" data-menu-open>
+                        <use href="./images/burgerandxx.svg#icon-burger"></use>
+                  </svg>
+                  <nav class="navigation">
+                        <ul class="list navigation__list">
+                              <li class="navigation__item">
+                                    <a class="navigation__link" href="index.html">Agencja</a>
+                              </li>
+                              <li class="navigation__item">
+                                    <a class="navigation__link navigation__link--active" href="portfolio.html">Portfolio</a>
+                              </li>
+                              <li class="navigation__item">
+                                    <a class="navigation__link" href="#">Kontakt</a>
+                              </li>
+                        </ul>
+                  </nav>
+                  <ul class="list page-header__list">
+                        <li class="page-header__item">
+                              <a class="page-header__contact" href="mailto:info@devstudio.com"><svg class="page-header__mail-icon">
+                              <use href="./images/icons.svg#icon-mailicon"></use>
+                              </svg>info@devstudio.com</a>
+                        </li>
+                        <li class="page-header__item">
+                              <a class="page-header__contact" href="tel:48111111111"><svg class="page-header__phone-icon">
+                              <use href="./images/icons.svg#icon-phoneicon"></use>
+                              </svg>+48 111 111 111</a>
+                        </li>
+                  </ul>
             </div>
-        </div>
-    </header>
-   
+      </header>
   
    <main>
        <!--hero buttons-->
@@ -149,65 +154,59 @@
     </section>
     </main>
 
- <footer class="sectionfooter">
-    <div class="container" >
-        <ul class="footer">
-    <li class="contact"><div class="contact__wrapper"> 
-    <a class="link" href="index.html"> <span class="logodark">Web</span>Studio </a>
-     <address class="address">
-        m. Warszawa, Aleje Jerozolimskie 21 <br>
-     <a class="address-mail" href="mailto:info@example.com">info@example.com</a> <br>
-     <a class="address-phone" href="tel:48111111111">+48 111 111 111 </a> <br>
-    </address>
-    </div></li>
-    <li class="righfooter"><div class="righfooter__wrapper">
-        <p class="righfooter__header">DOŁĄCZ DO NAS</p>
-        <ul class="socialmedia">
-            <li class="socialmedia__item">
-                <a class="socialmedia__link">
-                    <svg class="socialmedia__icon" width="20" height="20" >
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                </a> 
-            </li>
-            <li class="socialmedia__item">
-                <a class="socialmedia__link">
-                    <svg class="socialmedia__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="socialmedia__item">
-                <a class="socialmedia__link">
-                    <svg class="socialmedia__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="socialmedia__item">
-                <a class="socialmedia__link">
-                    <svg class="socialmedia__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div></li>
-
-    <!--newsletter-->
-    <div class="newsletter">
-        <p class="newsletter__header">ZAPISZ SIĘ DO NEWSLETTERA</p>
-        <form class="newsletter__form" name="newsletter-form" autocomplete="on" formvalidate>
-            <label><input class="newsletter__input" type="email" name="email" placeholder="E-mail" /></label>
-            <button class="newsletter__btn" type="submit">
-                <svg class="newsletter__icon" width="139" height="32">
-                    <use href="./images/icons.svg#icon-newsletterbtn"></use>
-                </svg>
-            </button>
-        </form>
-    </div>
-    </div>
-</footer> 
+ <footer class="section page-footer">
+            <div class="container">
+                  <div class="page-footer__contact-wrapper">
+                        <div class="page-footer__address-container">
+                              <a class="logo page-footer__logo" href="index.html"><span class="logo__span">Web</span>Studio</a>
+                              <address class="address page-footer__address"><span class="address__span">m. Warszawa, Aleje Jerozolimskie 21</span><br><a class="address__contact" href="mailto:info@example.com">info@example.com</a><br><a class="address__contact" href="tel:48111111111">+48 111 111 111</a></address>
+                        </div>
+                        <div class="page-footer__socials">
+                              <h3 class="third-heading page-footer__third-heading">Dołącz do nas</h3>
+                              <ul class="list">
+                                    <li class="socials">
+                                          <a href="#" class="socials__link socials__link--dark">
+                                                <svg class="socials__icon" width="20" height="20">
+                                                      <use href="images/icons.svg#icon-instagram"></use>
+                                                </svg>
+                                          </a>
+                                    </li>
+                                    <li class="socials">
+                                          <a href="#" class="socials__link socials__link--dark">
+                                                <svg class="socials__icon" width="20" height="20">
+                                                      <use href="images/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                          </a>
+                                    </li>
+                                    <li class="socials">
+                                          <a href="#" class="socials__link socials__link--dark">
+                                                <svg class="socials__icon" width="20" height="20">
+                                                      <use href="images/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                          </a>
+                                    </li>
+                                    <li class="socials">
+                                          <a href="#" class="socials__link socials__link--dark">
+                                                <svg class="socials__icon" width="20" height="20">
+                                                      <use href="images/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                          </a>
+                                    </li>
+                              </ul>
+                        </div>
+                  </div>
+                  <div class="page-footer__form-container">
+                        <h3 class="third-heading page-footer__third-heading">Zapisz się do newslettera</h3>
+                        <form action="#" class="page-footer__form">
+                              <input type="email" name="user-email" placeholder="E-mail" class="page-footer__input">
+                              <button type="submit" class="button page-footer__button">Zapisz się <svg
+                                          class="page-footer__icon">
+                                          <use href="images/icons.svg#icon-send"></use>
+                                    </svg></button>
+                        </form>
+                  </div>
+            </div>
+      </footer>
 
 
 
