--- a/index.html
+++ b/index.html
@@ -125,7 +125,21 @@
     <ul class="team">
         <!--pierwsza osoba-->
         <li class="team__item">
-            <img class="team__img" src="/goit-markup-hw-05/images/imgfourr.jpg" alt="Product designer" width="270" height="260">
+            <picture>
+                                <source
+                                srcset="images/team1mobile.jpg 1x, images/team1mobile@2x.jpg 2x"
+                                media="(min-width:320px) and (max-width:767px)"/>
+                                <source
+                                srcset="images/team1tablet.jpg 1x, images/team1tablet@2x.jpg 2x"
+                                media="(min-width:768px) and (max-width:1199px)"/>
+                                <source
+                                srcset="images/team1desktop.jpg 1x, images/team1desktop@2x.jpg 2x"
+                                media="(min-width:1200px)"/>
+                                <img src="images/imgfourr.jpg" 
+                                alt="Product Designer"
+                                />
+                            </picture>
+            <!--<img class="team__img" src="/goit-markup-hw-05/images/imgfourr.jpg" alt="Product designer" width="270" height="260"> -->
             <div class="team__wrapper">
             <h3 class="header-three-contact">John Doe</h3>
             <p class="description-text-contact">Product Designer</p>
@@ -147,7 +161,21 @@
         </li>
         <!--druga osoba-->
         <li class="team__item">
-            <img class="team__img" src="/goit-markup-hw-05/images/imgfivee.jpg" alt="Frontend Developer" width="270" height="260">
+            <picture>
+                                <source
+                                srcset="images/team2mobile.jpg 1x, images/team2mobile@2x.jpg 2x"
+                                media="(min-width:320px) and (max-width:767px)"/>
+                                <source
+                                srcset="images/team2tablet.jpg 1x, images/team2tablet@2x.jpg 2x"
+                                media="(min-width:768px) and (max-width:1199px)"/>
+                                <source
+                                srcset="images/team2desktop.jpg 1x, images/team2desktop@2x.jpg 2x"
+                                media="(min-width:1200px)"/>
+                                <img src="images/imgfivee.jpg" 
+                                alt="Frontend Developer"
+                                />
+                            </picture>
+            <!--<img class="team__img" src="/goit-markup-hw-05/images/imgfivee.jpg" alt="Frontend Developer" width="270" height="260"> -->
             <div class="team__wrapper">
                 <h3 class="header-three-contact">John Doe</h3>
                 <p class="description-text-contact">Frontend Developer</p>
@@ -169,7 +197,21 @@
         </li>
         <!--trzecia osoba-->
         <li class="team__item">
-            <img class="team__img" src="/goit-markup-hw-05/images/imgsixx.jpg" alt="Marketing" width="270" height="260">
+            <picture>
+                                <source
+                                srcset="images/team3mobile.jpg 1x, images/team3mobile@2x.jpg 2x"
+                                media="(min-width:320px) and (max-width:767px)"/>
+                                <source
+                                srcset="images/team3tablet.jpg 1x, images/team3tablet@2x.jpg 2x"
+                                media="(min-width:768px) and (max-width:1199px)"/>
+                                <source
+                                srcset="images/team3desktop.jpg 1x, images/team3desktop@2x.jpg 2x"
+                                media="(min-width:1200px)"/>
+                                <img src="images/imgsixx.jpg" 
+                                alt="Marketing"
+                                />
+                            </picture>
+            <!--<img class="team__img" src="/goit-markup-hw-05/images/imgsixx.jpg" alt="Marketing" width="270" height="260"> -->
             <div class="team__wrapper">
             <h3 class="header-three-contact">John Doe</h3>
             <p class="description-text-contact">Marketing</p>
@@ -191,7 +233,21 @@
         </li>
         <!--czwarta osoba-->
         <li class="team__item">
-            <img class="team__img" src="/goit-markup-hw-05/images/imgsevenn.jpg" alt="UI Designer" width="270" height="260">
+            <picture>
+                                <source
+                                srcset="images/team4mobile.jpg 1x, images/team4mobile@2x.jpg 2x"
+                                media="(min-width:320px) and (max-width:767px)"/>
+                                <source
+                                srcset="images/team4tablet.jpg 1x, images/team4tablet@2x.jpg 2x"
+                                media="(min-width:768px) and (max-width:1199px)"/>
+                                <source
+                                srcset="images/team4desktop.jpg 1x, images/team4desktop@2x.jpg 2x"
+                                media="(min-width:1200px)"/>
+                                <img src="images/imgsevenn.jpg" 
+                                alt="UI Designer"
+                                />
+                            </picture>
+            <!-- <img class="team__img" src="/goit-markup-hw-05/images/imgsevenn.jpg" alt="UI Designer" width="270" height="260"> -->
             <div class="team__wrapper">
             <h3 class="header-three-contact">John Doe</h3>
             <p class="description-text-contact">UI Designer</p>
