--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <source
                                 srcset="images/team1desktop.jpg 1x, images/team1desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
-                                <img src="images/imgfourr.jpg" 
+                                <img src="./images/imgfourr.jpg" 
                                 alt="Product Designer"
                                 />
                             </picture>
@@ -171,7 +171,7 @@
                                 <source
                                 srcset="images/team2desktop.jpg 1x, images/team2desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
-                                <img src="images/imgfivee.jpg" 
+                                <img src="./images/imgfivee.jpg" 
                                 alt="Frontend Developer"
                                 />
                             </picture>
@@ -207,7 +207,7 @@
                                 <source
                                 srcset="images/team3desktop.jpg 1x, images/team3desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
-                                <img src="images/imgsixx.jpg" 
+                                <img src="./images/imgsixx.jpg" 
                                 alt="Marketing"
                                 />
                             </picture>
@@ -243,7 +243,7 @@
                                 <source
                                 srcset="images/team4desktop.jpg 1x, images/team4desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
-                                <img src="images/imgsevenn.jpg" 
+                                <img src="./images/imgsevenn.jpg" 
                                 alt="UI Designer"
                                 />
                             </picture>
