--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
         <li class="team__item">
             <picture>
                                 <source
-                                srcset="images/team1mobile.jpg 1x, images/team1mobile@2x.jpg 2x"
+                                srcset="images/newimages/team/team1mobile.jpg 1x, images/newimages/team/team1mobile@2x.jpg 2x"
                                 media="(min-width:320px) and (max-width:767px)"/>
                                 <source
-                                srcset="images/team1tablet.jpg 1x, images/team1tablet@2x.jpg 2x"
+                                srcset="images/newimages/team/team1tablet.jpg 1x, images/newimages/team/team1tablet@2x.jpg 2x"
                                 media="(min-width:768px) and (max-width:1199px)"/>
                                 <source
-                                srcset="images/team1desktop.jpg 1x, images/team1desktop@2x.jpg 2x"
+                                srcset="images/newimages/team/team1desktop.jpg 1x, images/newimages/team/team1desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
                                 <img src="./images/imgfourr.jpg" 
                                 alt="Product Designer"
@@ -163,13 +163,13 @@
         <li class="team__item">
             <picture>
                                 <source
-                                srcset="images/team2mobile.jpg 1x, images/team2mobile@2x.jpg 2x"
+                                srcset="images/newimages/team/team2mobile.jpg 1x, images/newimages/team/team2mobile@2x.jpg 2x"
                                 media="(min-width:320px) and (max-width:767px)"/>
                                 <source
-                                srcset="images/team2tablet.jpg 1x, images/team2tablet@2x.jpg 2x"
+                                srcset="images/newimages/team/team2tablet.jpg 1x, images/newimages/team/team2tablet@2x.jpg 2x"
                                 media="(min-width:768px) and (max-width:1199px)"/>
                                 <source
-                                srcset="images/team2desktop.jpg 1x, images/team2desktop@2x.jpg 2x"
+                                srcset="images/newimages/team/team2desktop.jpg 1x, images/newimages/team/team2desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
                                 <img src="./images/imgfivee.jpg" 
                                 alt="Frontend Developer"
@@ -199,13 +199,13 @@
         <li class="team__item">
             <picture>
                                 <source
-                                srcset="images/team3mobile.jpg 1x, images/team3mobile@2x.jpg 2x"
+                                srcset="images/newimages/team/team3mobile.jpg 1x, images/newimages/team/team3mobile@2x.jpg 2x"
                                 media="(min-width:320px) and (max-width:767px)"/>
                                 <source
-                                srcset="images/team3tablet.jpg 1x, images/team3tablet@2x.jpg 2x"
+                                srcset="images/newimages/team/team3tablet.jpg 1x, images/newimages/team/team3tablet@2x.jpg 2x"
                                 media="(min-width:768px) and (max-width:1199px)"/>
                                 <source
-                                srcset="images/team3desktop.jpg 1x, images/team3desktop@2x.jpg 2x"
+                                srcset="images/newimages/team/team3desktop.jpg 1x, images/newimages/team/team3desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
                                 <img src="./images/imgsixx.jpg" 
                                 alt="Marketing"
@@ -235,13 +235,13 @@
         <li class="team__item">
             <picture>
                                 <source
-                                srcset="images/team4mobile.jpg 1x, images/team4mobile@2x.jpg 2x"
+                                srcset="./images/newimages/team/team4mobile.jpg 1x, ./images/newimages/team/team4mobile@2x.jpg 2x"
                                 media="(min-width:320px) and (max-width:767px)"/>
                                 <source
-                                srcset="images/team4tablet.jpg 1x, images/team4tablet@2x.jpg 2x"
+                                srcset="./images/newimages/team/team4tablet.jpg 1x, ./images/newimages/team/team4tablet@2x.jpg 2x"
                                 media="(min-width:768px) and (max-width:1199px)"/>
                                 <source
-                                srcset="images/team4desktop.jpg 1x, images/team4desktop@2x.jpg 2x"
+                                srcset="./images/newimages/team/team4desktop.jpg 1x, ./images/newimages/team/team4desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
                                 <img src="./images/imgsevenn.jpg" 
                                 alt="UI Designer"
