--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,27 @@
                   </div>
             </div>
       </footer>
-
+<div class="mobile-menu is-hidden" data-menu>
+            <svg class="close-btn mobile-menu__close-btn" data-menu-close>
+                  <use href="/images/burgerandxx.svg#icon-xxclose"></use>
+            </svg>
+            <ul class="list mobile-menu__nav-list">
+                  <li class="mobile-menu__nav-item"><a href="index.html" class="mobile-menu__nav-link">Agencja</a></li>
+                  <li class="mobile-menu__nav-item"><a href="portfolio.html" class="mobile-menu__nav-link">Portfolio</a></li>
+                  <li class="mobile-menu__nav-item"><a href="#" class="mobile-menu__nav-link">Kontakt</a></li>
+            </ul>
+            <ul class="list mobile-menu__contact-list">
+                  <li class="mobile-menu__contact-item"><a href="tel:48111111111" class="mobile-menu__phone">+48 111 111 111</a></li>
+                  <li class="mobile-menu__contact-item"><a href="mailto:info@devstudio.com" class="mobile-menu__mail">info@devstudio.com</a></li>
+            </ul>
+            <ul class="list mobile-menu__social-list">
+                  <li class="mobile-menu__social-item"><a href="#" class="mobile-menu__social-link">Instagram</a></li>
+                  <li class="mobile-menu__social-item"><a href="#" class="mobile-menu__social-link">Twitter</a></li>
+                  <li class="mobile-menu__social-item"><a href="#" class="mobile-menu__social-link">Facebook</a></li>
+                  <li class="mobile-menu__social-item"><a href="#" class="mobile-menu__social-link">LinkedIn</a></li>
+            </ul>
+      </div>
+    <script src="./js/mobile-menu.js"></script>
 
 
 </body>
