--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-    <header class="page-header">
+    <header class="header">
             <div class="container">
                   <!--logo-->
-                  <a class="logo page-header__logo" href="index.html"><span class="logo__span">Web</span>Studio</a>
-                  <svg class="page-header__burger-icon" data-menu-open>
+                  <a class="logo header__logo" href="index.html"><span class="logo__motive">Web</span>Studio</a>
+                  <svg class="header__burger-icon" data-menu-open>
                         <use href="./images/burgerandxx.svg#icon-burger"></use>
                   </svg>
                   <nav class="navigation">
@@ -36,14 +36,14 @@
                               </li>
                         </ul>
                   </nav>
-                  <ul class="list page-header__list">
-                        <li class="page-header__item">
-                              <a class="page-header__contact" href="mailto:info@devstudio.com"><svg class="page-header__mail-icon">
+                  <ul class="list header__list">
+                        <li class="header__item">
+                              <a class="header__contact" href="mailto:info@devstudio.com"><svg class="header__mail-icon">
                               <use href="./images/icons.svg#icon-mailicon"></use>
                               </svg>info@devstudio.com</a>
                         </li>
-                        <li class="page-header__item">
-                              <a class="page-header__contact" href="tel:48111111111"><svg class="page-header__phone-icon">
+                        <li class="header__item">
+                              <a class="header__contact" href="tel:48111111111"><svg class="header__phone-icon">
                               <use href="./images/icons.svg#icon-phoneicon"></use>
                               </svg>+48 111 111 111</a>
                         </li>
@@ -271,15 +271,15 @@
     </section>
     </main>
 
- <footer class="section page-footer">
+ <footer class="section footer">
             <div class="container">
-                  <div class="page-footer__contact-wrapper">
-                        <div class="page-footer__address-container">
-                              <a class="logo page-footer__logo" href="index.html"><span class="logo__span">Web</span>Studio</a>
-                              <address class="address page-footer__address"><span class="address__span">m. Warszawa, Aleje Jerozolimskie 21</span><br><a class="address__contact" href="mailto:info@example.com">info@example.com</a><br><a class="address__contact" href="tel:48111111111">+48 111 111 111</a></address>
+                  <div class="footer__contact-wrapper">
+                        <div class="footer__address-container">
+                              <a class="logo footer__logo" href="index.html"><span class="logo__motive">Web</span>Studio</a>
+                              <address class="address footer__address"><span class="address__span">m. Warszawa, Aleje Jerozolimskie 21</span><br><a class="address__contact" href="mailto:info@example.com">info@example.com</a><br><a class="address__contact" href="tel:48111111111">+48 111 111 111</a></address>
                         </div>
-                        <div class="page-footer__socials">
-                              <h3 class="third-heading page-footer__third-heading">Dołącz do nas</h3>
+                        <div class="footer__socials">
+                              <h3 class="titlefooter footer__third-heading">Dołącz do nas</h3>
                               <ul class="list">
                                     <li class="socials">
                                           <a href="#" class="socials__link socials__link--dark">
@@ -312,37 +312,39 @@
                               </ul>
                         </div>
                   </div>
-                  <div class="page-footer__form-container">
-                        <h3 class="third-heading page-footer__third-heading">Zapisz się do newslettera</h3>
-                        <form action="#" class="page-footer__form">
-                              <input type="email" name="user-email" placeholder="E-mail" class="page-footer__input">
-                              <button type="submit" class="button page-footer__button">Zapisz się <svg
-                                          class="page-footer__icon">
+                  <div class="footer__form-container">
+                        <h3 class="titlefooter footer__third-heading">Zapisz się do newslettera</h3>
+                        <form action="#" class="footer__form">
+                              <input type="email" name="user-email" placeholder="E-mail" class="footer__input">
+                              <button type="submit" class="button footer__button">Zapisz się <svg
+                                          class="footer__icon">
                                           <use href="images/icons.svg#icon-send"></use>
                                     </svg></button>
                         </form>
                   </div>
             </div>
       </footer>
-<div class="mobile-menu is-hidden" data-menu>
-            <svg class="close-btn mobile-menu__close-btn" data-menu-close>
+<div class="mobilemenu is-hidden" data-menu>
+    
+            <svg class="close-btn mobilemenu__close-btn" data-menu-close>
                   <use href="/images/burgerandxx.svg#icon-xxclose"></use>
             </svg>
-            <ul class="list mobile-menu__nav-list">
-                  <li class="mobile-menu__nav-item"><a href="index.html" class="mobile-menu__nav-link">Agencja</a></li>
-                  <li class="mobile-menu__nav-item"><a href="portfolio.html" class="mobile-menu__nav-link">Portfolio</a></li>
-                  <li class="mobile-menu__nav-item"><a href="#" class="mobile-menu__nav-link">Kontakt</a></li>
+            <ul class="list mobilemenu__nav-list">
+                  <li class="mobilemenu__nav-item"><a href="index.html" class="mobilemenu__nav-link">Agencja</a></li>
+                  <li class="mobilemenu__nav-item"><a href="portfolio.html" class="mobilemenu__nav-link">Portfolio</a></li>
+                  <li class="mobilemenu__nav-item"><a href="#" class="mobilemenu__nav-link">Kontakt</a></li>
             </ul>
-            <ul class="list mobile-menu__contact-list">
-                  <li class="mobile-menu__contact-item"><a href="tel:48111111111" class="mobile-menu__phone">+48 111 111 111</a></li>
-                  <li class="mobile-menu__contact-item"><a href="mailto:info@devstudio.com" class="mobile-menu__mail">info@devstudio.com</a></li>
+            <ul class="list mobilemenu__contact-list">
+                  <li class="mobilemenu__contact-item"><a href="tel:48111111111" class="mobilemenu__phone">+48 111 111 111</a></li>
+                  <li class="mobilemenu__contact-item"><a href="mailto:info@devstudio.com" class="mobilemenu__mail">info@devstudio.com</a></li>
             </ul>
-            <ul class="list mobile-menu__social-list">
-                  <li class="mobile-menu__social-item"><a href="#" class="mobile-menu__social-link">Instagram</a></li>
-                  <li class="mobile-menu__social-item"><a href="#" class="mobile-menu__social-link">Twitter</a></li>
-                  <li class="mobile-menu__social-item"><a href="#" class="mobile-menu__social-link">Facebook</a></li>
-                  <li class="mobile-menu__social-item"><a href="#" class="mobile-menu__social-link">LinkedIn</a></li>
+            <ul class="list mobilemenu__social-list">
+                  <li class="mobilemenu__social-item"><a href="#" class="mobilemenu__social-link">Instagram</a></li>
+                  <li class="mobilemenu__social-item"><a href="#" class="mobilemenu__social-link">Twitter</a></li>
+                  <li class="mobilemenu__social-item"><a href="#" class="mobilemenu__social-link">Facebook</a></li>
+                  <li class="mobilemenu__social-item"><a href="#" class="mobilemenu__social-link">LinkedIn</a></li>
             </ul>
+            
       </div>
     <script src="./js/mobile-menu.js"></script>
 
