--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
              <use class="lorem-icon" href="./images/icons.svg#icon-antenna" ></use>
          </svg>
             <h3 class="adventages__header">LOREM IPSUM</h3>
-            <p class="adventages__text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada</p></li>
+            <p class="adventages__text">Lorem ipsum dolor sit amet, consectetur  adipiscing elit. Nam vel arcu sem. Sed  non sodales dui. Interdum et malesuada</p></li>
          <li class="adventages__item"><svg class="adventages__icon" width="67" height="70">
             <use class="lorem-icon" href="./images/icons.svg#icon-clock"></use>
         </svg>
         <h3 class="adventages__header">LOREM IPSUM</h3>
-            <p class="adventages__text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
+            <p class="adventages__text">Lorem ipsum dolor sit amet, consectetur  adipiscing elit. Nam vel arcu sem. Sed  non sodales dui. Interdum et malesuada
         </p></li>
          <li class="adventages__item"><svg class="adventages__icon" width="70" height="54">
             <use class="lorem-icon" href="./images/icons.svg#icon-diagram"></use>
         </svg>
         <h3  class="adventages__header">LOREM IPSUM</h3>
-            <p class="adventages__text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
+            <p class="adventages__text">Lorem ipsum dolor sit amet, consectetur  adipiscing elit. Nam vel arcu sem. Sed  non sodales dui. Interdum et malesuada
         </p></li>
          <li class="adventages__item"><svg class="adventages__icon" width="70" height="70">
             <use class="lorem-icon" href="./images/icons.svg#icon-astronaut"></use>
         </svg>
         <h3  class="adventages__header">LOREM IPSUM</h3>
-            <p class="adventages__text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
+            <p class="adventages__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed  non sodales dui. Interdum et malesuada
         </p></li>
      </ul> 
     </div>
@@ -136,7 +136,7 @@
                                 srcset="images/newimages/team/team1desktop.jpg 1x, images/newimages/team/team1desktop@2x.jpg 2x"
                                 media="(min-width:1200px)"/>
                                 <img src="./images/imgfourr.jpg" 
-                                alt="Product Designer"
+                                alt="Frontend Developer"
                                 />
                             </picture>
             <!--<img class="team__img" src="/goit-markup-hw-05/images/imgfourr.jpg" alt="Product designer" width="270" height="260"> -->
